--- a/about/index.html
+++ b/about/index.html
@@ -1,14 +1,22 @@
 <div class="about">
 			<h1>About</h1>
 			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
-			<div class="container">
-				<p>
-					A lot of shit
-				</p>
-			</div>
+	<h2>overflow: auto</h2>
+	<div class ="scr">
+		fdsfaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+	</div>
 			<ul class="contacts">
 				<li><a href="#">@TwitterHandle</a></li>
 				<li><a href="#">Your Departmental Webpage</a></li>
 				<li><a href="#">Another site you want to link to</a></li>
 				</ul>
-		</div>
+	</div>
+<style>
+	div.scr
+	{
+		background-color: lightblue;
+		width: 110px;
+		height: 110px;
+		overflow: auto;
+	}
+</style>
