--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,12 @@
 				</ul>
 	</div>
 <style>
+	nav ul li, footer ul li 
+	{
+    		display: inline;
+    		margin-right: 20px;
+	}
+	
 	div.scr
 	{
 		background-color: lightblue;
