--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,13 @@
 				</ul>
 	</div>
 <style>
+	nav ul, footer ul 
+	{
+    	font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    	padding: 0px;
+    	list-style: none;
+    	font-weight: bold;
+	}
 	div.scr
 	{
 		background-color: lightblue;
