--- a/about/index.html
+++ b/about/index.html
@@ -27,6 +27,20 @@
     	list-style: none;
     	font-weight: bold;
 	}
+	nav ul li, footer ul li 
+	{
+    	display: inline;
+    	margin-right: 20px;
+	}
+	a 
+	{
+    	text-decoration: none;
+    	color: #999;
+	}
+	a:hover 
+	{
+    	text-decoration: underline;
+	}
 	div.scr
 	{
 		background-color: lightblue;
