--- a/cv/index.html
+++ b/cv/index.html
@@ -1,4 +1,12 @@
 	<div class="cv">
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
 					<h1>Hank Quinlan</h1>
 					<address>
@@ -12,6 +20,28 @@
 					<h2>Select Publications</h2>
 
 					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
-
-
+						
 	</div>
+<style>
+	nav ul, footer ul 
+	{
+    	font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    	padding: 0px;
+    	list-style: none;
+    	font-weight: bold;
+	}
+	nav ul li, footer ul li 
+	{
+    	display: inline;
+    	margin-right: 20px;
+	}
+	a 
+	{
+    	text-decoration: none;
+    	color: #999;
+	}
+	a:hover 
+	{
+    	text-decoration: underline;
+	}
+</style>
