--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Ryan Mann WEbiste</h1>
+        		<h1>Ryan Mann Webiste</h1>
+			<section>
+				<img class="caropics" src="beretlizard.jpg" style="width:100%>
+			</section>
 				<p>I like <em>LIZARDS</em> a lot. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
