--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Ryan Mann Webiste</h1>
 			<section>
-				<img class="caropics" src="beretlizard.jpg" style="width:100%>
+				<img class="caropics" src="/pictures/beretlizard.jpg" style="width:100%>
 			</section>
 				<p>I like <em>LIZARDS</em> a lot. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
