--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
+			<section>
+				<img class="caropics" src="/pictures/beretlizard.jpg" style="width:100%>
+				<img class="caropics" src="/pictures/cowboylizard.jpg" style="width:100%>
+				<img class="caropics" src="/pictures/mlizard.jpg" style="width:100%>
+				<img class="caropics" src="/pictures/sharklizard.jpg" style="width:100%>
+				<img class="caropics" src="/pictures/skatelizard.jpg" style="width:100%>
+				<img class="caropics" src="/pictures/wizardlizard.jpg" style="width:100%>							     
+			</section>
 		<div class="container">
     		<div class="blurb">
         		<h1>Ryan Mann Webiste</h1>
-			<section>
-				<img class="caropics" src="/pictures/beretlizard.jpg" style="width:100%>
-			</section>
 				<p>I like <em>LIZARDS</em> a lot. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
