--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</script>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Ryan Mann Webiste</h1>
+        		<h1>Ryan Mann Website</h1>
 				<p>I like <em>LIZARDS</em> a lot. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
