--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			function carousel() {
 			  var i;
-			  var x = document.getElementsByClassName("mySlides");
+			  var x = document.getElementsByClassName("caropics");
 			  for (i = 0; i < x.length; i++) {
 			    x[i].style.display = "none";
 			  }
