--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</script>
 		<div class="container">
     		<div class="blurb">
-        		<h1>The Lizard Dome</h1>
+        		<h1>The Lizard Doom</h1>
 				<p>I like <em>LIZARDS</em> a lot. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
