--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
-		<ul>
-			<li><img class="img1" src="/pictures/wizardlizard.jpg"></li>
-			<li><img class="img2" src="/pictures/mlizard.jpg"></li>
-			<li><img class="img3" src="/pictures/skatelizard.jpg"></li>
-		</ul>
+		<section>
+				<img class="img1" src="/pictures/wizardlizard.jpg">
+				<img class="img2" src="/pictures/mlizard.jpg">
+				<img class="img3" src="/pictures/skatelizard.jpg">
+		</section>
 		<div class="container">
     		<div class="blurb">
         		<h1>The Lizard Doom</h1>
