--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     		</ul>
 		</nav>
 		<section>
-				<img class="img1" src="/pictures/wizardlizard.jpg">
-				<img class="img2" src="/pictures/mlizard.jpg">
-				<img class="img3" src="/pictures/skatelizard.jpg">
+				<img class="caroimg" src="/pictures/wizardlizard.jpg">
+				<img class="caroimg" src="/pictures/mlizard.jpg">
+				<img class="caroimg" src="/pictures/skatelizard.jpg">
+				<img class="caroimg" src="/pictures/sharklizard.jpg">
 		</section>
 		<div class="container">
     		<div class="blurb">
