--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 				<img class="caroimg" src="/pictures/skatelizard.jpg">
 				<img class="caroimg" src="/pictures/sharklizard.jpg">
 		</section>
+		<script>
+// Automatic Slideshow - change image every 3 seconds
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("caroimg");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}
+  x[myIndex-1].style.display = "block";
+  setTimeout(carousel, 3000);
+}
+</script>
 		<div class="container">
     		<div class="blurb">
         		<h1>The Lizard Doom</h1>
