Update and rename blog/index.html to sightings/index.html

--- a/sightings/index.html
+++ b/sightings/index.html
@@ -1,10 +1,10 @@
-<div class="blog">
+<div class="sightings">
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/sightings">Sightings</a></li>
     		</ul>
 		</nav>
 		<a href="ladybughat.jpg" class="download" title="Download CV as PDF">Download Forbidden Picture</a>			
