--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/sightings">Sightings</a></li>
     		</ul>
 		</nav>
 			<h1>About</h1>
