--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/sightings">Sightings</a></li>
     		</ul>
 		</nav>
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
