--- a/sightings/index.html
+++ b/sightings/index.html
@@ -13,6 +13,7 @@
 <form method = "get" action = "http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php">
     <label for = "text">Location: </label>
     <input type = 'text' id = 'text' name = "text"><br>
+    <input type="submit" value="Submit">
 </form>
 <style>
 		nav ul, footer ul 
