--- a/lizards/index.html
+++ b/lizards/index.html
@@ -1,9 +1,9 @@
-	<div class="cv">
+	<div class="lizards">
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/lizards">Lizards</a></li>
         		<li><a href="/sightings">Sightings</a></li>
     		</ul>
 		</nav>
