--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/lizards">Lizards</a></li>
         		<li><a href="/sightings">Sightings</a></li>
     		</ul>
 		</nav>
