--- a/lizards/index.html
+++ b/lizards/index.html
@@ -7,19 +7,16 @@
         		<li><a href="/sightings">Sightings</a></li>
     		</ul>
 		</nav>
-		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Hank Quinlan</h1>
-					<address>
-					<strong>Affiliation</strong><br>
-					Street Address<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> (123) 456-7890<br>
-					<span class="obfuscate">youremailaddress@email.com</span>
-					</address>
-
-					<h2>Select Publications</h2>
-
-					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
+		<p>
+			Some fun facts about lizards...
+		</p>
+		<ul>
+			<li>Did you know that they wear not only hats but other things too; I am disallowed from providing this...</li>
+			<li> hey actually do not feel as strange as you'd think</li>
+			<li>Tuataras are possibly the best lizards</li>
+			<li>There are 17 recorded species of lizards that can speak basic french</li>
+			<li>Catfish are NOT lizards stop asking!</li>
+			<li>We have not yet found any extraterrestrial lizards but they could exist I am unsure?</li>
 						
 	</div>
 <style>
