--- a/lizards/index.html
+++ b/lizards/index.html
@@ -18,6 +18,15 @@
 			<li>Catfish are NOT lizards stop asking!</li>
 			<li>We have not yet found any extraterrestrial lizards but they could exist I am unsure?</li>
 		</ul>
+		
+		<p1>
+			Links
+		</p1>
+		
+		<a href="http://lizards.com">I have no idea what this is but I love it</a>
+		<a href="en.wikipedia.org/wiki/Lizard">Lizard</a>
+		<a href="en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a>
+		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a>
 						
 	</div>
 <style>
