--- a/lizards/index.html
+++ b/lizards/index.html
@@ -23,10 +23,10 @@
 			Links
 		</p1>
 		
-		<a href="http://lizards.com">I have no idea what this is but I love it</a>
-		<a href="en.wikipedia.org/wiki/Lizard">Lizard</a>
-		<a href="en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a>
-		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a>
+		<a href="http://lizards.com">I have no idea what this is but I love it</a><br>
+		<a href="en.wikipedia.org/wiki/Lizard">Lizard</a><br>
+		<a href="en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a><br>
+		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a><br>
 						
 	</div>
 <style>
