--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ function carousel() {
 		<div class="container">
     		<div class="blurb">
         		<h1>The Lizard Doom</h1>
-				<p>I like <em>LIZARDS</em> a lot. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+				<p>I like <em>LIZARDS</em> a lot. <a href="/sightings">Please tell me when you see one!</a></p>
+    		</div>
+		</div>
 		<footer>
     		<ul>
         		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
