--- a/about/index.html
+++ b/about/index.html
@@ -13,11 +13,15 @@
 	<div class ="scr">
 		fdsfaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
 	</div>
-			<ul class="contacts">
-				<li><a href="#">@TwitterHandle</a></li>
-				<li><a href="#">Your Departmental Webpage</a></li>
-				<li><a href="#">Another site you want to link to</a></li>
-				</ul>
+		<p1>
+			Links
+		</p1>
+		<br>
+		
+		<a href="http://lizards.com">I have no idea what this is but I love it</a><br>
+		<a href="en.wikipedia.org/wiki/Lizard">Lizard</a><br>
+		<a href="en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a><br>
+		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a><br>
 	</div>
 <style>
 	nav ul, footer ul 
