--- a/about/index.html
+++ b/about/index.html
@@ -20,8 +20,8 @@
 		<br>
 		
 		<a href="http://lizards.com">I have no idea what this is but I love it</a><br>
-		<a href="en.wikipedia.org/wiki/Lizard">Lizard</a><br>
-		<a href="en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a><br>
+		<a href="http://en.wikipedia.org/wiki/Lizard">Lizard</a><br>
+		<a href="http://en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a><br>
 		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a><br>
 	</div>
 <style>
