--- a/sightings/index.html
+++ b/sightings/index.html
@@ -8,7 +8,7 @@
     		</ul>
 		</nav>
 		<a href="ladybughat.jpg" class="download" title="Download CV as PDF">Download Forbidden Picture</a>
-		<a href="ladybughat.jpg">Download</a>
+		<a href="ladybughat.jpg" download>Download</a>
 					<h2>Lizard Sightings</h2>						
 </div>
 <form method = "get" action = "http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php">
