--- a/sightings/index.html
+++ b/sightings/index.html
@@ -7,8 +7,7 @@
         		<li><a href="/sightings">Sightings</a></li>
     		</ul>
 		</nav>
-		<a href="ladybughat.jpg" class="download" title="Download CV as PDF">Download Forbidden Picture</a>
-		<a href="ladybughat.jpg" download>Download</a>
+		<a href="ladybughat.jpg" download>Download Forbidden Picture</a>
 					<h2>Lizard Sightings</h2>						
 </div>
 <form method = "get" action = "http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php">
