--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@ carousel();
 function carousel() {
   var i;
   var x = document.getElementsByClassName("caroimg");
-  for (i = 0; i < x.length; i++) {
+  for (i = 0; i < x.length; i++) 
+  {
     x[i].style.display = "none";
   }
   myIndex++;
-  if (myIndex > x.length) {myIndex = 1}
+  if (myIndex > x.length) 
+  {
+	  myIndex = 1
+  }
   x[myIndex-1].style.display = "block";
   setTimeout(carousel, 5000);
 }
