--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function carousel() {
   myIndex++;
   if (myIndex > x.length) 
   {
-	  myIndex = 1
+	  myIndex = 1;
   }
   x[myIndex-1].style.display = "block";
   setTimeout(carousel, 5000);
