--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 				<img class="caroimg" src="/pictures/mlizard.jpg">
 				<img class="caroimg" src="/pictures/skatelizard.jpg">
 				<img class="caroimg" src="/pictures/sharklizard.jpg">
+				<img class="caroimg" src="/pictures/cowboylizard.jpg">
+				<img class="caroimg" src="/pictures/beretlizard.jpg">
 		</section>
 		<script>
 // Automatic Slideshow - change image every 3 seconds
