--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ function carousel() {
 		</div>
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
+        		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
 			</ul>
 		</footer>
 	</body>
