--- a/lizards/index.html
+++ b/lizards/index.html
@@ -30,6 +30,12 @@
 		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a><br>
 						
 	</div>
+	<footer>
+    		<ul>
+        		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
+        		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
+		</ul>
+	</footer>
 <style>
 	nav ul, footer ul 
 	{
@@ -51,5 +57,10 @@
 	a:hover 
 	{
     	text-decoration: underline;
+	}
+	footer 
+	{
+    	border-top: 1px solid #d5d5d5;
+    	font-size: .8em;
 	}
 </style>
