--- a/sightings/index.html
+++ b/sightings/index.html
@@ -10,6 +10,13 @@
 		<a href="ladybughat.jpg" download>Download Forbidden Picture</a>
 					<h2>Lizard Sightings</h2>						
 </div>
+	<footer>
+    		<ul>
+        		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
+        		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
+		</ul>
+	</footer>
+
 <form method = "get" action = "http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php">
     <label for = "text">Location: </label>
     <input type = 'text' id = 'text' name = "text"><br>
@@ -36,5 +43,10 @@
 	a:hover 
 	{
     	text-decoration: underline;
+	}
+	footer 
+	{
+    	border-top: 1px solid #d5d5d5;
+    	font-size: .8em;
 	}
 </style>
