--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,13 @@
 		<a href="http://en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a><br>
 		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a><br>
 	</div>
+	<br>
+	<footer>
+    		<ul>
+        		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
+        		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
+		</ul>
+	</footer>
 <style>
 	nav ul, footer ul 
 	{
@@ -52,5 +59,10 @@
 		width: 110px;
 		height: 110px;
 		overflow: auto;
+	}
+	footer 
+	{
+    	border-top: 1px solid #d5d5d5;
+    	font-size: .8em;
 	}
 </style>
