--- a/sightings/index.html
+++ b/sightings/index.html
@@ -1,49 +1,63 @@
+<!--Sightings page-->
 <div class="sightings">
+	<!--Header-->
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/lizards">Lizards</a></li>
-        		<li><a href="/sightings">Sightings</a></li>
-    		</ul>
+    			<ul>
+        			<li><a href="/">Home</a></li>
+	        		<li><a href="/about">About</a></li>
+        			<li><a href="/lizards">Lizards</a></li>
+        			<li><a href="/sightings">Sightings</a></li>
+    			</ul>
 		</nav>
+	
+		<!--Download link-->
 		<a href="ladybughat.jpg" download>Download Forbidden Picture</a>
+	
 					<h2>Lizard Sightings</h2>						
 </div>
+
+<!--Get form for lizard sightings-->
 <form method = "get" action = "http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php">
     <label for = "text">Location: </label>
-    <input type = 'text' id = 'text' name = "text"><br>
+    <input type = 'text' id = 'text' name = "text">
     <input type="submit" value="Submit">
 </form>
 <br>
+
+	<!--Footer-->
 	<footer>
     		<ul>
         		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
         		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
 		</ul>
 	</footer>
+
 <style>
-		nav ul, footer ul 
+	nav ul, footer ul 
 	{
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
     	padding: 0px;
     	list-style: none;
     	font-weight: bold;
 	}
+	
 	nav ul li, footer ul li 
 	{
     	display: inline;
-    	margin-right: 20px;
+    	margin-right: 35px;
 	}
+	
 	a 
 	{
     	text-decoration: none;
-    	color: #999;
+    	color: #6B8E23;
 	}
+	
 	a:hover 
 	{
     	text-decoration: underline;
 	}
+	
 	footer 
 	{
     	border-top: 1px solid #d5d5d5;
