--- a/sightings/index.html
+++ b/sightings/index.html
@@ -33,6 +33,8 @@
 	</footer>
 
 <style>
+	
+	/*Style header and footer*/
 	nav ul, footer ul 
 	{
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -40,27 +42,26 @@
     	list-style: none;
     	font-weight: bold;
 	}
-	
 	nav ul li, footer ul li 
 	{
     	display: inline;
     	margin-right: 35px;
 	}
 	
+	/*Add color and hover effect*/
 	a 
 	{
     	text-decoration: none;
     	color: #6B8E23;
 	}
-	
 	a:hover 
 	{
     	text-decoration: underline;
 	}
 	
+	/*Style footer color*/
 	footer 
 	{
     	border-top: 1px solid #808000;
-
 	}
 </style>
