--- a/lizards/index.html
+++ b/lizards/index.html
@@ -1,15 +1,20 @@
-	<div class="lizards">
+<!--Lizards page-->
+<div class="lizards">
+	<!--Header-->
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/lizards">Lizards</a></li>
-        		<li><a href="/sightings">Sightings</a></li>
-    		</ul>
+    			<ul>
+        			<li><a href="/">Home</a></li>
+	        		<li><a href="/about">About</a></li>
+        			<li><a href="/lizards">Lizards</a></li>
+        			<li><a href="/sightings">Sightings</a></li>
+    			</ul>
 		</nav>
+		<!--Fun facts-->
 		<p>
 			Some fun facts about lizards...
 		</p>
+		
+		<!--Unordered list-->
 		<ul>
 			<li>Did you know that they wear not only hats but other things too; I am disallowed from providing this...</li>
 			<li> hey actually do not feel as strange as you'd think</li>
@@ -19,6 +24,7 @@
 			<li>We have not yet found any extraterrestrial lizards but they could exist I am unsure?</li>
 		</ul>
 		
+		<!--Links-->
 		<p1>
 			Links
 		</p1>
@@ -29,15 +35,19 @@
 		<a href="http://en.wikipedia.org/wiki/Catfish">NOT A LIZARD</a><br>
 		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a><br>
 						
-	</div>
-	<br>
+</div>
+<br>
+	<!--Footer-->
 	<footer>
     		<ul>
         		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
         		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
 		</ul>
 	</footer>
+
 <style>
+	
+	/*Style header and footer*/
 	nav ul, footer ul 
 	{
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -48,20 +58,23 @@
 	nav ul li, footer ul li 
 	{
     	display: inline;
-    	margin-right: 20px;
+    	margin-right: 35px;
 	}
+	
+	/*Add color and hover effect*/
 	a 
 	{
     	text-decoration: none;
-    	color: #999;
+    	color: #6B8E23;
 	}
 	a:hover 
 	{
     	text-decoration: underline;
 	}
+	
+	/*Style footer color*/
 	footer 
 	{
-    	border-top: 1px solid #d5d5d5;
-    	font-size: .8em;
+    	border-top: 1px solid #808000;
 	}
 </style>
