--- a/about/index.html
+++ b/about/index.html
@@ -1,19 +1,27 @@
+<!--About page-->
 <div class="about">
-			<nav>
+	
+	<!--Header-->
+	<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/lizards">Lizards</a></li>
         		<li><a href="/sightings">Sightings</a></li>
     		</ul>
-		</nav>
+	</nav>
+			
 			<h1>About</h1>
 			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
+	
+	<!--Scroll bar text box-->
 	<h2>overflow: auto</h2>
 	<div class ="scr">
+		
 		fdsfaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
 	</div>
 	<br>
+		<!--Links-->
 		<p1>
 			Links
 		</p1>
@@ -25,44 +33,54 @@
 		<a href="https://www.youtube.com/watch?v=pOIq_AAYDwM">Sublime...</a><br>
 	</div>
 	<br>
+
+	<!--Footer-->
 	<footer>
     		<ul>
         		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
         		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
 		</ul>
 	</footer>
+
 <style>
+	
+	/*Style header and footer*/
 	nav ul, footer ul 
 	{
-    	font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    	padding: 0px;
-    	list-style: none;
-    	font-weight: bold;
+    		font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    		padding: 0px;
+    		list-style: none;
+    		font-weight: bold;
 	}
 	nav ul li, footer ul li 
 	{
-    	display: inline;
-    	margin-right: 20px;
+    		display: inline;
+    		margin-right: 35px;
 	}
+	
+	/*Add color and hover effect*/
 	a 
 	{
-    	text-decoration: none;
-    	color: #999;
+    		text-decoration: none;
+    		color: #6B8E23;
 	}
 	a:hover 
 	{
-    	text-decoration: underline;
+    		text-decoration: underline;
 	}
+	
+	/*Scroll box styling*/
 	div.scr
 	{
-		background-color: lightblue;
+		background-color: lightgreen;
 		width: 110px;
 		height: 110px;
 		overflow: auto;
 	}
+	
+	/*Footer styling*/
 	footer 
 	{
-    	border-top: 1px solid #d5d5d5;
-    	font-size: .8em;
+    		border-top: 1px solid #808000;
 	}
 </style>
