--- a/lizards/index.html
+++ b/lizards/index.html
@@ -40,7 +40,7 @@
 	<!--Footer-->
 	<footer>
     		<ul>
-        		<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
+        		<li><a href="https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
         		<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
 		</ul>
 	</footer>
