--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function carousel()
 		<!--Display footer-->
 		<footer>
     			<ul>
-        			<li><a href="http://https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
+        			<li><a href="https://www.youtube.com/watch?v=kGOQfLFzJj8">lizard</a></li>
         			<li><a href="https://github.com/mannry22">github.com/mannry22</a></li>
 			</ul>
 		</footer>
