--- a/about/index.html
+++ b/about/index.html
@@ -12,13 +12,16 @@
 	</nav>
 			
 			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
+			<p>Hi, my name is Ryan Mann.  I currently have the flu so this page is a work in progress!.  It is an ode to my love of anything scaly and weird.  I am currently a student at OSU, after earning a bachelors in accounting and finance at Lehigh University.</p>
 	
-	<!--Scroll bar text box-->
+	<!--Scroll bar text box, text taken from wikipedia-->
 	<h2>overflow: auto</h2>
 	<div class ="scr">
 		
-		fdsfaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+		This is an example of a scrolling text box that scrolls to accomodate large amounts of text.
+		"Lizards are a widespread group of squamate reptiles, with over 6,000 species,[1] ranging across all continents except Antarctica, as well as most oceanic island chains. The group is paraphyletic as it excludes the snakes and Amphisbaenia; some lizards are more closely related to these two excluded groups than they are to other lizards. Lizards range in size from chameleons and geckos a few centimeters long to the 3 meter long Komodo dragon.
+
+Most lizards are quadrupedal, running with a strong side-to-side motion. Others are legless, and have long snake-like bodies. Some such as the forest-dwelling Draco lizards are able to glide. They are often territorial, the males fighting off other males and signalling, often with brightly colours, to attract mates and to intimidate rivals. Lizards are mainly carnivorous, often being sit-and-wait predators; many smaller species eat insects, while the Komodo eats mammals as big as water buffalo."
 	</div>
 	<br>
 		<!--Links-->
@@ -77,6 +80,11 @@
 		height: 110px;
 		overflow: auto;
 	}
+	
+	h1
+	{
+		color: #808000 
+	}	
 	
 	/*Footer styling*/
 	footer 
