--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 			<p>Hi, my name is Ryan Mann.  I currently have the flu so this page is a work in progress!.  It is an ode to my love of anything scaly and weird.  I am currently a student at OSU, after earning a bachelors in accounting and finance at Lehigh University.</p>
 	
 	<!--Scroll bar text box, text taken from wikipedia-->
-	<h2>overflow: auto</h2>
+	<h2>A brief background</h2>
 	<div class ="scr">
 		
 		This is an example of a scrolling text box that scrolls to accomodate large amounts of text.
