--- a/about/index.html
+++ b/about/index.html
@@ -76,8 +76,8 @@ Most lizards are quadrupedal, running with a strong side-to-side motion. Others 
 	div.scr
 	{
 		background-color: lightgreen;
-		width: 500px;
-		height: 500px;
+		width: 250px;
+		height: 250x;
 		overflow: auto;
 	}
 	
